# flexml

./: Cargo.toml
flexml/: Cargo.toml  README.md
flexml/src/: attribute.rs  data.rs  declaration.rs  document.rs  into_xml.rs  lib.rs  namespace.rs  namespaces_v2.rs  node.rs  xml.rs
flexml_macro/: Cargo.toml
flexml_macro/src/: derive_attributes.rs  lib.rs  xml_enum.rs  xml_struct.rs
flexml_tests/: Cargo.toml
flexml_tests/tests/: macro_test.rs
src/: data.rs  doc.rs  lib.rs  namespace.rs  node.rs
tests/: macro_test.rs
