[package]
name = "flexml"
version = "0.1.0"
edition = "2021"
description = "Quickly and easily define namespaced XML serialization"
license = "MIT"

[features]
macro = ["flexml_macro"]

[dependencies]
log = "0.4"
once_cell = "1"

flexml_macro = { version = "~0.1.0", path = "../flexml_macro", optional = true }

[dev-dependencies]
flexml_macro = { path = "../flexml_macro", optional = false }
