[package]
name = "flexml"
version = "0.2.1"
edition = "2021"
description = "Quickly and easily define namespaced XML serialization"
license = "MIT"

[features]
macro = ["flexml_macro"]

[dependencies]
log = "0.4"
once_cell = "1"

flexml_macro = { version = "~0.2.1", path = "../flexml_macro", optional = true }
indexmap = "2.7.1"

[dev-dependencies]
flexml_macro = { path = "../flexml_macro", optional = false }
