[package]
name = "flexml"
version = "0.5.3"
edition = "2021"
description = "Quickly and easily define namespaced XML serialization"
license = "MIT"

[features]
macro = ["flexml_macro"]

[dependencies]
log = "0.4"
once_cell = "1"
heck = "0.5"

flexml_macro = { version = "~0.5.3", path = "../flexml_macro", optional = true }


[dev-dependencies]
flexml_macro = { path = "../flexml_macro", optional = false }
