[package]
name = "flexml_macro"
version = "0.5.3"
edition = "2021"
description = "Macro feature dependency for flexml"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny" 
nursery = "deny"
unwrap_used = "deny"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "derive"] }
quote = "1.0"
proc-macro2 = "1"
heck = "0.5"

[lib]
proc-macro = true
